added search and random function

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
             <img src="img/icon.png">
             <button class="navBtn trending">Trending</button>
             <button class="navBtn random">Random</button>
-            <button class="navBtn search">Search</button>
+            <form class="searchInput">
+                <input type="text" id="input" placeholder="enter what you want...">
+                <button class="search">Search</button>
+            </form>
         </div>
     </nav>
 
