Every function work well.

--- a/index.html
+++ b/index.html
@@ -17,17 +17,13 @@
             <button class="navBtn random">Random</button>
             <form class="searchInput">
                 <input type="text" id="input" placeholder="enter what you want...">
-                <button class="search">Search</button>
+                <button class="search" type="submit">Search</button>
             </form>
         </div>
     </nav>
 
-
-    <ul class="giphyHere"></ul>
-    <button class="showMore">Show More</button>
-
+    <main></main>
     
-
     <script src="scripts/main.js"></script>
     <script src="scripts/giphy-link.js"></script>
 </body>
