--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
 
     <nav>
+        <h1>Giphy - API</h1>
         <div class="navbar">
-            <img src="img/icon.png">
             <button class="navBtn trending">Trending</button>
             <button class="navBtn random">Random</button>
             <form class="searchInput">
